--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/index.css">
@@ -36,7 +37,7 @@
       </nav>
     </header>
 
-    <div class="full-body bg-white p-0 col-12">
+    <div class="full-body bg-white p-0 col-12 d-flex">
       <div class="p-0 side-menu">
         <div class="bg-light sidebar-toggle border" id="sidebar-wrapper">
           <div class="list-group list-group-flush d-flex align-itens-center">
@@ -70,7 +71,7 @@
           </div>
         </div>
       </div>
-      <div class="offset-2 col-10">
+      <div class="col-10">
         <section class="statistic-cards d-flex mt-4 p-0 col-12">
           <div class="row justify-content-between col-12 p-0">
             <div class="card statistic-cards-element mb-2">
@@ -253,7 +254,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
   <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="js/index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
   <script src="js/salesPerformance.js"></script>
   <script src="js/topCategories.js"></script>
