--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               <ion-icon name="person-circle-outline" size='large' class="account-photo"></ion-icon>
             </a>
           </div>
+        </nav>
       </div>
-      </nav>
     </header>
 
     <div class="full-body bg-white p-0 col-12 d-flex">
@@ -71,7 +71,7 @@
           </div>
         </div>
       </div>
-      <div class="col-10">
+      <div class="offset-1 col-10">
         <section class="statistic-cards d-flex mt-4 p-0 col-12">
           <div class="row justify-content-between col-12 p-0">
             <div class="card statistic-cards-element mb-2">
