melhor organização do código

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             </div>
           </div>
         </section>
+
         <section class="table d-flex col-12 p-0">
           <div class="row col-12 mt-4 p-0">
             <div class=" col-12 d-flex justify-content-between mb-2 align-items-center">
@@ -289,17 +290,15 @@
         </section>
       </div>
     </div>
+
     <footer class="page-footer border bg-light">
-      <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <div class="footer-copyright text-center py-3">
+        © 2020 Copyright:
         <a href="https://github.com/FilipedePaula" target="_blank">Filipe de Paula</a>
       </div>
     </footer>
   </div>
 
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
