--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                   href="https://www.linkedin.com/in/filipe-de-paula/"
                   target="_blank"
                   rel="external nofollow"
+                  class="header__link-filipe--no-underline"
                 >
                   <h5 class="mb-0 link-nome">Filipe de Paula</h5>
                 </a>
@@ -73,7 +74,7 @@
                 <ion-icon
                   name="person-circle-outline"
                   size="large"
-                  class="account-photo"
+                  class="header__account-photo--pattern"
                 ></ion-icon>
               </a>
             </div>
@@ -81,9 +82,11 @@
         </div>
       </header>
 
-      <div class="full-body bg-white p-0 col-12">
-        <div class="bg-light sidebar-toggle border" id="sidebar-wrapper">
-          <ul class="list-group list-group-flush d-flex align-itens-center">
+      <main class="main--pattern bg-white p-0 col-12">
+        <div class="bg-light sidebar--pattern border" id="sidebar-wrapper">
+          <ul
+            class="sidebar__list-group list-group list-group-flush d-flex align-itens-center"
+          >
             <li>
               <a
                 href="#"
@@ -160,9 +163,9 @@
         </div>
 
         <div class="offset-1 col-10 pl-5">
-          <section class="statistic-cards d-flex pt-4 p-0 col-12">
+          <section class="statistic-section--pattern d-flex pt-4 p-0 col-12">
             <div class="row justify-content-between col-12 p-0">
-              <div class="card statistic-cards-element mb-2">
+              <div class="card statistic-section__card--pattern mb-2">
                 <div
                   class="card-body d-flex justify-content-between align-items-center"
                 >
@@ -172,12 +175,12 @@
                   </div>
                   <ion-icon
                     name="logo-html5"
-                    class="float-right logo-html5"
+                    class="float-right statistic-section__logo-html5--color-red"
                     size="large"
                   ></ion-icon>
                 </div>
               </div>
-              <div class="card statistic-cards-element mb-2">
+              <div class="card statistic-section__card--pattern mb-2">
                 <div
                   class="card-body d-flex justify-content-between align-items-center"
                 >
@@ -187,12 +190,12 @@
                   </div>
                   <ion-icon
                     name="logo-css3"
-                    class="float-right logo-css3"
+                    class="float-right statistic-section__logo-css3--color-blue"
                     size="large"
                   ></ion-icon>
                 </div>
               </div>
-              <div class="card statistic-cards-element mb-2">
+              <div class="card statistic-section__card--pattern mb-2">
                 <div
                   class="card-body d-flex justify-content-between align-items-center"
                 >
@@ -202,7 +205,7 @@
                   </div>
                   <ion-icon
                     name="logo-javascript"
-                    class="float-right logo-js"
+                    class="float-right statistic-section__logo-jss--color-yellow"
                     size="large"
                   ></ion-icon>
                 </div>
@@ -210,9 +213,12 @@
             </div>
           </section>
 
-          <section class="charts d-flex col-12 p-0">
+          <section class="charts-section--pattern d-flex col-12 p-0">
             <div class="row col-12 mt-4 p-0 justify-content-between">
-              <div class="card card-chart chart-inline">
+              <div
+                class="card charts-section__card--height"
+                id="charts-section__sales-performance-chart--width"
+              >
                 <div class="card-body p-2">
                   <div
                     class=" col-12 d-flex justify-content-between mb-2 align-items-center"
@@ -227,7 +233,10 @@
                   <canvas id="lineChart" width="528" height="264"></canvas>
                 </div>
               </div>
-              <div class="card card-chart chart-doughnut">
+              <div
+                class="card charts-section__card--height"
+                id="charts-section__top-categories-chart--width"
+              >
                 <div class="card-body p-2">
                   <h5 class="card-title border-bottom p-2 text-uppercase">
                     Top Categories
@@ -400,7 +409,7 @@
             </div>
           </section>
         </div>
-      </div>
+      </main>
 
       <footer class="page-footer border bg-light">
         <div class="footer-copyright text-center py-3">
