Ajustes no tamanho da página e no sidebar. Ajuste nas cores

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <header>
         <div class="pos-f-t bg-light">
           <nav
-            class="navbar navbar-dark bg-ligth border d-flex justify-content-between"
+            class="navbar navbar-dark bg-ligth border d-flex justify-content-between px-1 py-2"
           >
             <div>
               <button
@@ -247,7 +247,7 @@
             </div>
           </section>
 
-          <section class="table d-flex col-12 p-0">
+          <section class="table-client-section--pattern d-flex col-12 p-0 ">
             <div class="row col-12 mt-4 p-0">
               <div
                 class=" col-12 d-flex justify-content-between mb-2 align-items-center"
@@ -258,7 +258,7 @@
                 </button>
               </div>
               <table class="table table-striped border table-data">
-                <tbody>
+                <tbody class="table-client-section--pattern__tbody--pattern">
                   <tr>
                     <td class="align-middle">
                       <h5>
@@ -411,7 +411,7 @@
         </div>
       </main>
 
-      <footer class="page-footer border bg-light">
+      <footer class="fotter fixed border bg-light">
         <div class="footer-copyright text-center py-3">
           © 2020 Copyright:
           <a
