adição de modais para uma maior interação no site. Apenas no candidato Filipe

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 >
                   <div class="cards-text">
                     <h5 class="card-title mb-0">CSS3 Projects</h5>
-                    <small class="muted-text">211.453</small>
+                    <small class="muted-text">21.453</small>
                   </div>
                   <ion-icon
                     name="logo-css3"
@@ -252,7 +252,7 @@
               <div
                 class=" col-12 d-flex justify-content-between mb-2 align-items-center"
               >
-                <h5 class="text-uppercase">Recent Customers</h5>
+                <h5 class="text-uppercase">Recent Candidates</h5>
                 <button type="button" class="btn btn-light">
                   <ion-icon name="settings-sharp"></ion-icon>
                 </button>
@@ -278,32 +278,186 @@
                       <small class="mb-0 ml-3 text-muted">Location</small>
                     </td>
                     <td class="align-middle">
-                      <button type="button" class="btn btn-secondary px-4">
+                      <button
+                        type="button"
+                        class="btn btn-secondary px-4"
+                        data-toggle="modal"
+                        data-target="#hire-me"
+                      >
                         options
                       </button>
+                      <div
+                        class="modal fade"
+                        id="hire-me"
+                        tabindex="-1"
+                        role="dialog"
+                        aria-labelledby="hireMeModalLabel"
+                        aria-hidden="true"
+                      >
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="hireMeModalLabel">
+                                Muitas razões para me contratar!
+                              </h5>
+                              <button
+                                type="button"
+                                class="close"
+                                data-dismiss="modal"
+                                aria-label="Close"
+                              >
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <span class="text-muted">
+                                Sou estudante de programação com experiência no
+                                ambiente de desenvolvimento. Possuo as skills
+                                necessárias para o cargo e conto com muita força
+                                de vontade para aprender e me desenvolver junto
+                                à empresa.
+                              </span>
+                            </div>
+                            <div class="modal-footer">
+                              <button
+                                type="button"
+                                class="btn btn-secondary"
+                                data-dismiss="modal"
+                              >
+                                Close
+                              </button>
+                              <a
+                                type="button"
+                                class="btn btn-success"
+                                href="https://wa.me/5584992251552?text=A%20Esig%20decidiu%20lhe%20contratar.%20Parabéns!!"
+                                target="_blank"
+                                rel="external nofollow"
+                              >
+                                <span class="text-light">WhatsApp Now!</span>
+                              </a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </td>
                     <td class="align-middle">
-                      <button type="button" class="btn btn-primary px-4">
+                      <button
+                        type="button"
+                        class="btn btn-primary px-4"
+                        data-toggle="modal"
+                        data-target="#curriculum"
+                      >
                         Details
                       </button>
+                      <div
+                        class="modal fade"
+                        id="curriculum"
+                        tabindex="-1"
+                        role="dialog"
+                        aria-labelledby="curriculumFilipe"
+                        aria-hidden="true"
+                      >
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="curriculumFilipe">
+                                Minhas principais skills
+                              </h5>
+                              <button
+                                type="button"
+                                class="close"
+                                data-dismiss="modal"
+                                aria-label="Fechar"
+                              >
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              <div class="mb-5">
+                                <h5 class="text-primary">Contatos</h5>
+                                <span>
+                                  <strong>E-mail:</strong>
+                                  filipedepaula.ads@gmail.com
+                                </span></br>
+                                <span>
+                                  <strong>Linkedin:</strong>
+                                  <a href="https://www.linkedin.com/in/filipe-de-paula/">
+                                    linkedin.com/in/filipe-de-paula
+                                  </a>
+                                </span></br>
+                                <span>
+                                  <strong>GitHub</strong>
+                                  <a href="https://github.com/FilipedePaula">
+                                    github.com/FilipedePaula
+                                  </a>
+                                </span>
+                              </div>
+                              <div class="mb-5">
+                                <h5 class="text-primary">Skills</h5>
+                                <span>
+                                  <strong>Linguagens:</strong>
+                                  HTML, CSS, JavaScript
+                                </span></br>
+                                <span>
+                                  <strong>Frameworks:</strong>
+                                  SASS, Bootstrap, JQuery, React, Electron,
+                                  Angular
+                                </span></br>
+                                <span>
+                                  <strong>Tecnologias:</strong>
+                                  GIT, AJAX
+                                </span></br>
+                                <span>
+                                  <strong>Línguas:</strong>
+                                  Inglês(Avançado)
+                                </span>
+                              </div>
+                              <div>
+                                <h5 class="text-primary">Experiências</h5>
+                                <strong>Accenture do Brasil LTDA</strong></br>
+                                <span class="text-muted">Analista jr</span>
+                                <ul class="mt-3">
+                                  <li>Analista em projetos SAP (Abap).</li>
+                                  <li>Experiência com o ambiente de desenvolvimento. Responsável pelo desenvolvimento
+                                    de módulos da área financeira/contábil de um sistemafarmacêutico de grande porte.
+                                    Garantia de qualidade de software por meio de limpeza de código e testes unitários
+                                    junto aos desenvolvedores (lado do cliente). Uso de softwares versionadores (SVN e
+                                     Charm).
+                                  </li>
+                                </ul>
+                              </div>
+                            </div>
+                            <div class="modal-footer">
+                              <button
+                                type="button"
+                                class="btn btn-secondary"
+                                data-dismiss="modal"
+                              >
+                                Close
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                     </td>
                   </tr>
                   <tr>
                     <td class="align-middle">
                       <h5>
-                        Filipe de Paula
+                        Outro candidato
                       </h5>
                     </td>
                     <td>
-                      <p class="mb-0">12 mar 2020</p>
+                      <p class="mb-0">
+                        never entered</p>
                       <small class="mb-0 ml-5 text-muted">joined</small>
                     </td>
                     <td>
-                      <p class="mb-0">(84)99225-1552</p>
+                      <p class="mb-0">(XX)xxxxx-xxxx</p>
                       <small class="mb-0 ml-4 text-muted">Phone number</small>
                     </td>
                     <td>
-                      <p class="mb-0">Natal/RN</p>
+                      <p class="mb-0">GN-z11</p>
                       <small class="mb-0 ml-3 text-muted">Location</small>
                     </td>
                     <td class="align-middle">
@@ -320,19 +474,20 @@
                   <tr>
                     <td class="align-middle">
                       <h5>
-                        Filipe de Paula
+                        Outro candidato
                       </h5>
                     </td>
                     <td>
-                      <p class="mb-0">12 mar 2020</p>
+                      <p class="mb-0">
+                        never entered</p>
                       <small class="mb-0 ml-5 text-muted">joined</small>
                     </td>
                     <td>
-                      <p class="mb-0">(84)99225-1552</p>
+                      <p class="mb-0">(XX)xxxxx-xxxx</p>
                       <small class="mb-0 ml-4 text-muted">Phone number</small>
                     </td>
                     <td>
-                      <p class="mb-0">Natal/RN</p>
+                      <p class="mb-0">GN-z11</p>
                       <small class="mb-0 ml-3 text-muted">Location</small>
                     </td>
                     <td class="align-middle">
@@ -349,19 +504,20 @@
                   <tr>
                     <td class="align-middle">
                       <h5>
-                        Filipe de Paula
+                        Outro candidato
                       </h5>
                     </td>
                     <td>
-                      <p class="mb-0">12 mar 2020</p>
+                      <p class="mb-0">
+                        never entered</p>
                       <small class="mb-0 ml-5 text-muted">joined</small>
                     </td>
                     <td>
-                      <p class="mb-0">(84)99225-1552</p>
+                      <p class="mb-0">(XX)xxxxx-xxxx</p>
                       <small class="mb-0 ml-4 text-muted">Phone number</small>
                     </td>
                     <td>
-                      <p class="mb-0">Natal/RN</p>
+                      <p class="mb-0">GN-z11</p>
                       <small class="mb-0 ml-3 text-muted">Location</small>
                     </td>
                     <td class="align-middle">
@@ -378,19 +534,19 @@
                   <tr>
                     <td class="align-middle">
                       <h5>
-                        Filipe de Paula
+                        Outro candidato
                       </h5>
                     </td>
                     <td>
-                      <p class="mb-0">12 mar 2020</p>
+                      <p class="mb-0">never entered</p>
                       <small class="mb-0 ml-5 text-muted">joined</small>
                     </td>
                     <td>
-                      <p class="mb-0">(84)99225-1552</p>
+                      <p class="mb-0">(XX)xxxxx-xxxx</p>
                       <small class="mb-0 ml-4 text-muted">Phone number</small>
                     </td>
                     <td>
-                      <p class="mb-0">Natal/RN</p>
+                      <p class="mb-0">GN-z11</p>
                       <small class="mb-0 ml-3 text-muted">Location</small>
                     </td>
                     <td class="align-middle">
